# autopush-rs

./: .clog.toml  .dockerignore  .gitguardian.yml  .gitignore  .prettierignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-dev  Makefile  README.md  catalog-info.yaml  cliff.toml  docker-compose-bigtable.yml  docker-compose-local.yaml  docker-compose-redis.yml  docker-compose.yml  dual_test.sh  entrypoint.sh  requirements.txt  test-requirements.txt  version.json
.cargo/: audit.toml
autoconnect/: Cargo.toml  catalog-info.yaml
autoconnect/autoconnect-common/: Cargo.toml
autoconnect/autoconnect-common/src/: broadcast.rs  lib.rs  megaphone.rs  protocol.rs  registry.rs  test_support.rs
autoconnect/autoconnect-registry/: Cargo.toml
autoconnect/autoconnect-registry/src/: lib.rs
autoconnect/autoconnect-settings/: Cargo.toml
autoconnect/autoconnect-settings/src/: app_state.rs  lib.rs  options.rs
autoconnect/autoconnect-web/: Cargo.toml
autoconnect/autoconnect-web/src/: broadcast.rs  client.rs  dockerflow.rs  error.rs  lib.rs  metrics.rs  protocol.rs  route.rs  routes.rs  test.rs
autoconnect/autoconnect-web/src/test/: mod.rs  sentry.rs
autoconnect/autoconnect-ws/: Cargo.toml
autoconnect/autoconnect-ws/autoconnect-ws-clientsm/: Cargo.toml
autoconnect/autoconnect-ws/autoconnect-ws-clientsm/src/: lib.rs
autoconnect/autoconnect-ws/autoconnect-ws-sm/: Cargo.toml
autoconnect/autoconnect-ws/autoconnect-ws-sm/src/: error.rs  identified.rs  lib.rs  unidentified.rs
autoconnect/autoconnect-ws/src/: error.rs  handler.rs  lib.rs  ping.rs  sentry.rs  session.rs  test.rs
autoconnect/src/: main.rs  settings.rs
autoconnect/src/middleware/: sentry.rs  sentry2.rs
autoconnect/src/server/: health.rs  metrics.rs  mod.rs  options.rs  registry.rs
autoconnect/src/server/middleware/: mod.rs  sentry.rs
autoendpoint/: Cargo.toml  catalog-info.yaml
autoendpoint/docs/: operation_notes.md
autoendpoint/src/: auth.rs  error.rs  logging.rs  main.rs  metrics.rs  server.rs  settings.rs  tags.rs
autoendpoint/src/db/: client.rs  error.rs  mock.rs  mod.rs  retry.rs
autoendpoint/src/db/dynamodb/: mod.rs
autoendpoint/src/db/postgres/: mod.rs  schema.psql
autoendpoint/src/extractors/: authorization_check.rs  forward_request.rs  forward_token.rs  message_id.rs  mod.rs  new_channel_data.rs  notification.rs  notification_headers.rs  otel_context.rs  registration_path_args.rs  registration_path_args_with_uaid.rs  router_data_input.rs  routers.rs  subscription.rs  token_info.rs  user.rs
autoendpoint/src/headers/: crypto_key.rs  mod.rs  util.rs  vapid.rs
autoendpoint/src/middleware/: mod.rs  sentry.rs  sentry2.rs
autoendpoint/src/routers/: common.rs  mod.rs  webpush.rs
autoendpoint/src/routers/adm/: client.rs  error.rs  mod.rs  router.rs  settings.rs
autoendpoint/src/routers/apns/: error.rs  mod.rs  router.rs  settings.rs
autoendpoint/src/routers/fcm/: client.rs  error.rs  router.rs  settings.rs
autoendpoint/src/routers/stub/: client.rs  error.rs  mod.rs  router.rs  settings.rs
autoendpoint/src/routers/wns/: client.rs  error.rs  mod.rs  router.rs  settings.rs
autoendpoint/src/routes/: forward.rs  health.rs  mod.rs  registration.rs  reliability.rs  webpush.rs
autoendpoint/src/server/: header_util.rs  mod.rs
autoendpoint/src/server/extractors/: authorization_check.rs  message_id.rs  mod.rs  notification.rs  notification_headers.rs  registration_path_args.rs  registration_path_args_with_uaid.rs  router_data_input.rs  router_token.rs  routers.rs  subscription.rs  token_info.rs  user.rs  webpush_headers.rs
autoendpoint/src/server/headers/: crypto_key.rs  mod.rs  vapid.rs
autoendpoint/src/server/routers/: mod.rs  webpush.rs
autoendpoint/src/server/routes/: health.rs  mod.rs  registration.rs  webpush.rs
autopush/: Cargo.toml  README.md
autopush-common/: Cargo.toml  build.rs
autopush-common/src/: consts.rs  endpoint.rs  errors.rs  glean.rs  lib.rs  logging.rs  message_id.rs  metric_name.rs  metrics.rs  notification.rs  otel.rs  redis_util.rs  reliability.rs  sentry.rs  tags.rs  test_support.rs  test_tools.rs  tls.rs  track_id.rs
autopush-common/src/db/: client.rs  commands.rs  error.rs  macros.rs  mock.rs  mod.rs  models.rs  reporter.rs  routing.rs  util.rs
autopush-common/src/db/bigtable/: mod.rs  pool.rs
autopush-common/src/db/dual/: mod.rs
autopush-common/src/db/dynamodb/: commands.rs  mod.rs  retry.rs
autopush-common/src/db/postgres/: error.rs  mod.rs  pool.rs  schema.psql  tokio_postgres.rs
autopush-common/src/middleware/: mod.rs  otel.rs  sentry.rs
autopush-common/src/util/: mod.rs  send_all.rs  timing.rs  user_agent.rs
autopush/src/: aclient.rs  client.rs  http.rs  main.rs  megaphone.rs  old_client.rs  settings.rs  user_agent.rs
autopush/src/db/: commands.rs  macros.rs  mod.rs  models.rs
autopush/src/routes/: health.rs
autopush/src/server/: aserver.rs  dispatch.rs  megaphone.rs  metrics.rs  mod.rs  old_server.rs  old_webpush_socket.rs  protocol.rs  rc.rs  registry.rs  tls.rs  webpush_io.rs
scripts/reliability/: Dockerfile  README.md  app.yaml  pyproject.toml  reliability_report.py
src/: lib.rs  (+7 more)
tests/: .flake8  bt_test.json  db.py  pyproject.toml  requirements.txt  test_integration.py  test_integration_all_rust.py
tests/integration/: Dockerfile  __init__.py  async_push_test_client.py  client.py  config.py  db.py  docker-compose.yml  dual_test.json  push_test_client.py  run_test_bt.sh  test_integration_all_rust.py
tests/load/: .flake8  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  locustfile.py  pyproject.toml  setup_k8s.sh
tests/load/keys/: README.md  private_key.pem  public_key.pem  public_key.x962
tests/load/kubernetes-config/: locust-master-controller.yml  locust-master-service.yml  locust-worker-controller.yml  locust-worker-daemonset.yml
tests/load/locustfiles/: args.py  exceptions.py  load.py  locustfile.py  models.py  stored.py
tests/notification/: Dockerfile  README.md  conftest.py  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini  test_notification.py
(+113 files in other folders)
