[package]
name = "autopush_common"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs"
resolver = "2"

[lib]
name = "autopush_common"

[dependencies]
actix-web.workspace = true
backtrace.workspace = true
base64.workspace = true
cadence.workspace = true
chrono.workspace = true
config.workspace = true
deadpool.workspace = true
fernet.workspace = true
futures.workspace = true
futures-util.workspace = true
lazy_static.workspace = true
mockall.workspace = true
openssl.workspace = true
rand.workspace = true
regex.workspace = true
sentry-backtrace.workspace = true
sentry.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-envlogger.workspace = true
slog-mozlog-json.workspace = true
slog-scope.workspace = true
slog-stdlog.workspace = true
slog-term.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
uuid.workspace = true
url.workspace = true

again = "0.1"
async-trait = "0.1"
derive_builder = "0.20"
gethostname = "1.0"
num_cpus = "1.16"
woothee = "0.13"
tokio = { workspace = true, features = ["macros", "sync" ] }

# #[cfg(bigtable)] for this section.
# Pre-generated tonic/prost stubs for the `google.bigtable.v2` API.
googleapis-tonic-google-bigtable-v2 = { version = "0.38", optional = true }
tonic = { version = "0.14", features = [
    "tls-ring",
    "tls-native-roots",
], optional = true }
# Application Default Credentials (ADC) token provider for Google APIs.
gcp_auth = { version = "0.12", optional = true }
prometheus-client = { version = "0.24", optional = true }
form_urlencoded = { version = "1.2", optional = true }

sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres"], optional = true }
deadpool-redis = { version = "0.23", features=["rt_tokio_1", "serde"], optional = true }
redis-module = { version = "2.0", optional = true }
redis = { version = "1.2", features=["aio", "tokio-comp"], optional = true }

[dev-dependencies]
actix-rt = "2.8"
mockito = "0.31"                                     # mockito > 0.31 will require significant reworking of the tests and is not critical yet.
redis = { version = "1.2", features = ["aio", "tokio-comp"] }       # needed by redis-test's aio feature
redis-test = { version = "1.0", features = ["aio"] }
tempfile = "3.2.0"

[features]
# NOTE: Do not set a `default` here, rather specify them in the calling library.
# This is to reduce complexity around feature specification.
bigtable = [
    "dep:googleapis-tonic-google-bigtable-v2",
    "dep:tonic",
    "dep:gcp_auth",
    "dep:form_urlencoded",
]
# used for testing big table, requires an external bigtable emulator running.
emulator = [
    "bigtable",
]
postgres = ["dep:sqlx"]
reliable_report = [
    "dep:redis",
    "dep:prometheus-client",
    "dep:redis-module",
    "dep:deadpool-redis",
]
redis = ["dep:redis", "dep:deadpool-redis"]
unsafe = []
