[package]
name = "autopush"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "autopush_rs"
path = "src/main.rs"

[dependencies]
base64.workspace = true
fernet.workspace = true

autopush_common = { path = "../autopush-common" }
bytes = "0.4" # XXX: pin to < 0.5 for hyper 0.12
cadence = "0.29"
crossbeam-channel = "0.5"
chrono = "0.4"
config = "0.13"
docopt = "1.1.0"
env_logger = "0.10"
error-chain = "0.12"
futures = "0.1.29" # XXX: pin to 0.1 until likely hyper 0.13
futures-locks = "0.5" # pin to 0.5 until futures update
hex = "0.4.2"
httparse = "1.3"
hyper = "^0.12.36" # pin to hyper 0.12 for now: 0.13 has many changes..
lazy_static = "1.4.0"
log = { version = "0.4", features = ["max_level_info", "release_max_level_info"] }
mozsvc-common = "0.2"
openssl = "0.10"
reqwest = "0.9.24" # XXX: pin to < 0.10 until futures 0.3
rusoto_dynamodb = "0.42.0" # XXX: pin to 0.42 until futures 0.3
sentry.workspace = true

serde = "1.0"
serde_derive = "1.0"
serde_dynamodb = "0.4.1"  # 0.7+ requires rusoto 0.46+
serde_json = "1.0"
signal-hook = "0.3"
slog.workspace = true
slog-async.workspace = true
slog-term.workspace = true
slog-mozlog-json.workspace = true
slog-scope.workspace = true
smallvec = "1.6"  # for RUSTSEC-2021-0003
# state_machine_future = { version = "0.1.6", features = ["debug_code_generation"] }
state_machine_future = "0.2.0"
tokio-core = "0.1"
tokio-io = "0.1.13"
tokio-openssl = "0.3.0" # XXX: pin to < 0.4 until hyper 0.13
tokio-service = "0.1.0"
# XXX: pin tokio-tungstenite & tungstenite until hyper 0.13
tokio-tungstenite = { version = "0.9.0", default-features = false }  # 0.10+ requires tokio 0.3+
tungstenite = { version = "0.9.2", default-features = false }  # 0.10+ requires tokio 0.3+
uuid = { version = "1.1", features = ["serde", "v4"] }
woothee = "0.13"
