[package]
name = "autopush"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "autopush_rs"
path = "src/main.rs"

[dependencies]
base64.workspace = true
cadence.workspace = true
chrono.workspace = true
config.workspace = true
docopt.workspace = true
fernet.workspace = true
hex.workspace = true
httparse.workspace = true
lazy_static.workspace = true
log.workspace = true
mozsvc-common.workspace = true
openssl.workspace = true
rand.workspace = true
regex.workspace = true
sentry.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-envlogger.workspace = true
slog-mozlog-json.workspace = true
slog-scope.workspace = true
slog-stdlog.workspace = true
slog-term.workspace = true
uuid.workspace = true

autopush_common = { path = "../autopush-common" }
bytes = "0.4" # XXX: pin to < 0.5 for hyper 0.12
crossbeam-channel = "0.5"
env_logger = "0.9"
thiserror = "1.0"
futures = "0.1.29" # XXX: pin to 0.1 until likely hyper 0.13
futures-backoff = "0.1.0"
futures-locks = "0.5" # pin to 0.5 until futures update
hyper = "^0.12.36" # pin to hyper 0.12 for now: 0.13 has many changes..
reqwest = "0.9.24" # XXX: pin to < 0.10 until futures 0.3
rusoto_core = "0.42.0"  # 0.46+ requires futures 0.3+
rusoto_credential = "0.42.0"  # 0.46+ requires futures 0.3+
rusoto_dynamodb = "0.42.0" # XXX: pin to 0.42 until futures 0.3
serde_dynamodb = "0.4" # 0.7+ requires carg 0.46+
signal-hook = "0.3"
# state_machine_future = { version = "0.1.6", features = ["debug_code_generation"] }
state_machine_future = "0.2.0"
tokio-core = "0.1"
tokio-io = "0.1.13"
tokio-openssl = "0.3.0" # XXX: pin to < 0.4 until hyper 0.13
# XXX: pin tokio-tungstenite & tungstenite until hyper 0.13
tokio-tungstenite = { version = "0.9.0", default-features = false }  # 0.10+ requires tokio 0.3+
tungstenite = { version = "0.9.2", default-features = false }  # 0.10+ requires tokio 0.3+
woothee = "0.13"
