[tool.black]
line-length = 99

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
disable_error_code = "attr-defined"
disallow_untyped_calls = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_error_codes = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true

[tool.poetry]
name = "tests"
version = "0.1.0"
description = "Autopush test solutions"
authors = ["Mozilla"]
license = "Mozilla Public License Version 2.0"

[tool.poetry.dependencies]
python = "^3.10"
websocket-client = "^1.6.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.7.0"

[tool.poetry.group.integration.dependencies]
attrs = "^23.1.0"
boto3 = "^1.28.83"
botocore = "^1.28.84"
bottle = "^0.12.25"
cryptography = "^41.0.6"
jws = "^0.1.3"
psutil = "^5.9.6"
pytest = "^7.4.3"
python-jose = "^3.3.0"
requests = "^2.31.0"
twisted = "^23.10.0"
types-requests = "^2.31.0.10"

[tool.poetry.group.load.dependencies]
locust = "^2.18.3"
numpy = "^1.26.2"
pydantic = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
