[tool.black]
line-length = 99

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.bandit]
# skips asserts
# B101: https://bandit.readthedocs.io/en/latest/plugins/b101_assert_used.html#
# B104: https://bandit.readthedocs.io/en/latest/plugins/b104_hardcoded_bind_all_interfaces.html
# B311: https://bandit.readthedocs.io/en/latest/blacklists/blacklist_calls.html#b311-random 
# B404: https://bandit.readthedocs.io/en/latest/blacklists/blacklist_imports.html#b404-import-subprocess
skips = ["B101", "B104", "B311", "B404"]

[tool.mypy]
python_version = "3.12"
disable_error_code = "attr-defined"
disallow_untyped_calls = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_error_codes = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true

[tool.pydocstyle]
match = ".*\\.py"
convention = "pep257"
# Error Code Ref: https://www.pydocstyle.org/en/stable/error_codes.html
# D212 Multi-line docstring summary should start at the first line
add-select = ["D212"]
# D105 Docstrings for magic methods
# D107 Docstrings for __init__
# D203 as it conflicts with D211 https://github.com/PyCQA/pydocstyle/issues/141
# D205 1 blank line required between summary line and description, awkward spacing
# D400 First line should end with a period, doesn't work when sentence spans 2 lines
add-ignore = ["D105","D107","D203", "D205", "D400"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry]
name = "tests"
version = "0.1.0"
description = "Autopush test solutions"
authors = ["Mozilla"]
license = "Mozilla Public License Version 2.0"

[tool.poetry.dependencies]
python = "^3.12"
websocket-client = "^1.7.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.1"
# flake8 configs in .flake8 file. Doesn't support .toml
flake8 = "^6.1.0"
mypy = "^1.7.1"
pydocstyle = "^6.3.0"
bandit = "^1.7.7"


[tool.poetry.group.integration.dependencies]
attrs = "^23.1.0"
boto3 = "^1.33.13"
botocore = "^1.33.13"
bottle = "^0.12.25"
cryptography = "^42.0.4"
jws = "^0.1.3"
psutil = "^5.9.6"
pytest = "^7.4.3"
python-jose = "^3.3.0"
requests = "^2.31.0"
twisted = "^23.10.0"
types-requests = "^2.31.0.10"
pytest-asyncio = "^0.23.5.post1"
httpx = "^0.27.0"

[tool.poetry.group.load.dependencies]
locust = "^2.20.0"
numpy = "^1.26.2"
pydantic = "^2.5.2"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
